Made navbar fixed to top of page. Added padding to root id to keep it from being hidden by nav. Added media query to adjust padding for root id on screens smaller than 800px

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -31,6 +31,11 @@
   padding-top: 15px;
   padding-bottom: 15px;
   border-bottom: 2px solid lightgray;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  background-color: white;
+  z-index: 100000;
 }
 
 .homeButtonDiv {
