--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -5,4 +5,11 @@ body {
 }
 #root {
   padding-bottom: 200px;
+  padding-top: 100px;
+}
+
+@media only screen and (max-width: 800px) {
+  #root {
+    padding-top: 250px;
+  }
 }
